Reworking the config

--- a/files/.gitconfig
+++ b/files/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Fundor333
-	email = fundor333@gmail.com
+	email = fundor333@fundor333.com
 	signingkey = 3FAC5F68
 [core]
 	editor = emacs
