--- a/files/.editorconfig
+++ b/files/.editorconfig
@@ -31,6 +31,13 @@ indent_size = 4
 indent_style = tab
 indent_size = 2
 
+[*.rs]
+end_of_line = lf
+charset = utf-8
+trim_trailing_whitespace = true
+indent_style = space
+indent_size = 4
+
 [*.php]
 charset = utf-8
 end_of_line = lf
