--- a/files/.ssh/config
+++ b/files/.ssh/config
@@ -1,9 +1,53 @@
-Host intranet intranet.alilaguna.it
-    HostName intranet.alilaguna.it
-    IdentityFile ~/.ssh/alilaguna_rsa
-    User developer
+# Home account
 
-Host github github.com
-    Hostname github.com
-    IdentityFile ~/.ssh/fundor333_rsa
+Host 35.230.131.8 
+  HostName 35.230.131.8
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/dokku
 
+Host 134.209.235.28
+  HostName 134.209.235.28
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/fundor333_mol
+
+Host intranet.alilaguna.it
+  HostName alilaguna.it
+  User developer
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/alilaguna
+
+Host presenze.alilaguna.it
+  HostName alilaguna.it
+  User developer
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/alilaguna
+  
+Host maps.alilaguna.it
+  HostName alilaguna.it
+  User developer
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/alilaguna
+  
+Host bauer.veneziaturismo.net
+  HostName veneziaturismo.net
+  User developer
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/alilaguna
+
+Host 167.71.34.219
+  HostName 167.71.34.219
+  User root
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/fundor333_mol
+
+Host gitlab.com
+  HostName gitlab.com
+  User git
+  AddKeysToAgent yes
+  IdentityFile ~/.ssh/fundor333_rsa
+
+Host github.com
+  HostName github.com
+  User git
+  AddKeysToAgent yes
+  IdentityFile ~/.ssh/fundor333_rsa
