--- a/.editorconfig
+++ b/.editorconfig
@@ -16,6 +16,11 @@ charset = utf-8
 indent_style = space
 indent_size = 2
 
+[.gitconfig]
+indent_style = tab
+tab_width   = 8
+indent_size = 8
+
 [Makefile]
 indent_style = tab
 indent_size = 4
