Cleaning and updating

--- a/files/.ssh/config
+++ b/files/.ssh/config
@@ -1,35 +1,30 @@
 # Home account
 
-Host 35.230.131.8 
-  HostName 35.230.131.8
-  PreferredAuthentications publickey
-  IdentityFile ~/.ssh/dokku
-
 Host 134.209.235.28
   HostName 134.209.235.28
   PreferredAuthentications publickey
   IdentityFile ~/.ssh/fundor333_mol
 
 Host intranet.alilaguna.it
-  HostName alilaguna.it
+  HostName 35.204.22.128
   User developer
   PreferredAuthentications publickey
   IdentityFile ~/.ssh/alilaguna
 
 Host presenze.alilaguna.it
-  HostName alilaguna.it
+  HostName 35.198.178.137
   User developer
   PreferredAuthentications publickey
   IdentityFile ~/.ssh/alilaguna
   
 Host maps.alilaguna.it
-  HostName alilaguna.it
+  HostName maps.alilaguna.it
   User developer
   PreferredAuthentications publickey
   IdentityFile ~/.ssh/alilaguna
   
 Host bauer.veneziaturismo.net
-  HostName veneziaturismo.net
+  HostName 35.246.247.89'
   User developer
   PreferredAuthentications publickey
   IdentityFile ~/.ssh/alilaguna
@@ -46,8 +41,42 @@ Host gitlab.com
   AddKeysToAgent yes
   IdentityFile ~/.ssh/fundor333_rsa
 
+
+Host 207.154.215.177
+  HostName 207.154.215.177
+  User root
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/fundor333_mol
+
+
 Host github.com
   HostName github.com
   User git
   AddKeysToAgent yes
   IdentityFile ~/.ssh/fundor333_rsa
+
+
+Host bauer.veneziaturismo.net
+  HostName bauer.veneziaturismo.net
+  User developer
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/alilaguna
+
+
+Host intranet.bucintoroviaggi.com
+  HostName intranet.bucintoroviaggi.com
+  User developer
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/alilaguna
+
+Host isolachenoncearte.it
+  HostName 165.22.82.136
+  User root
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/fundor333_mol
+
+Host fuel.fundor333.com
+  HostName fuel.fundor333.com
+  User root
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/fundor333_mol
