--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = dotbot
 	url = https://github.com/anishathalye/dotbot
 	ignore = dirty
+[submodule "emacs.d"]
+	path = emacs.d
+	url = https://github.com/fundor333/emacs.d.git
