--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -13,9 +13,10 @@
     ~/.irbrc:
     ~/.editorconfig:
     ~/.gitconfig:
-    ~/script:
-    ~/Xresources:
+    ~/.gitignore_global:
+    ~/.Xresources:
     ~/.ssh/config: ssh/config
+    ~/script:
     ~/.emacs.d:
 
 - shell:
