--- a/install.conf.yaml
+++ b/install.conf.yaml
@@ -1,24 +1,27 @@
 - defaults:
-    link:
-      create: true
-      relink: true
-      force: true
+      link:
+          create: true
+          relink: true
+          force: true
 
 - create:
-    ~/Coding:
-    ~/.gostuff:
+      ~/Coding:
+      ~/.gostuff:
 
 - link:
-    ~/.editorconfig:
-    ~/.gitconfig:
-    ~/.gitignore_global:
-    ~/.irbrc:
-    ~/.Xresources:
-    ~/.zshrc:
-    ~/.ssh/config: ssh/config
-    ~/script:
-    ~/.emacs.d:
+      ~/.editorconfig:
+      ~/.gitconfig:
+      ~/.gitignore_global:
+      ~/.irbrc:
+      ~/.Xresources:
+      ~/.zshrc:
+      ~/.ssh/config: ssh/config
+      ~/.config/darktable: config/darktable
+      ~/.config/neofetch: config/neofetch
+      ~/.config/twtxt: config/twtxt
+      ~/script:
+      ~/.emacs.d:
 
 - shell:
-    - [git submodule update --init --recursive, Installing submodules]
-    - [chmod +x ~/script/*]
+      - [git submodule update --init --recursive, Installing submodules]
+      - [chmod +x ~/script/*]
