--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "emacs.d"]
 	path = emacs.d
 	url = https://github.com/fundor333/emacs.d.git
+[submodule "dotbot-brew"]
+	path = .dotbot-brew
+	url = https://github.com/d12frosted/dotbot-brew.git
