--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,6 @@
 [submodule "dotbot-brew"]
 	path = .dotbot-brew
 	url = https://github.com/d12frosted/dotbot-brew.git
+[submodule "spaceship"]
+	path = .spaceship
+	url = https://github.com/denysdovhan/spaceship-prompt.git
