--- a/mac.conf.yaml
+++ b/mac.conf.yaml
@@ -1,5 +1,9 @@
 - create:
-    /usr/local/opt/openssl/lib/:
+    ~/.oh-my-zsh-custom/themes:
+
+- link:
+    ~/.oh-my-zsh: .oh-my-zsh
+    ~/.oh-my-zsh-custom/themes/spaceship.zsh-theme: .spaceship/spaceship.zsh-theme
 
 - brew:
     - git
