--- a/meta/configs/vscode.yaml
+++ b/meta/configs/vscode.yaml
@@ -20,6 +20,6 @@
           - [code --install-extension redhat.vscode-yaml]
 
 - link:
-          ~/AppData/Code/User/settings.json: vscode/settings.json
-          ~/Library/Application Support/Code/User/settings.json: vscode/settings.json
-          ~/.config/Code/User/settings.json: vscode/settings.json
+          ~/AppData/Code/User/settings.json: vs_settings.json
+          ~/Library/Application Support/Code/User/settings.json: vs_settings.json
+          ~/.config/Code/User/settings.json: vs_settings.json
