--- a/meta/configs/exe.yaml
+++ b/meta/configs/exe.yaml
@@ -2,7 +2,7 @@
           ~/.bin: bin_windows
 
 - shell:
-          - [chmod +x ~\.bin\*]
-          - [setx /M path "%path%;%USERPROFILE%\script"]
-          - [setx /M path "%path%;%USERPROFILE%\.bin"]
-          - [setx /M path "%path%;cmd.exe /K %USERPROFILE%\.bin\aliases.cmd"]
+          - chmod +x ~/.bin/*
+          - setx /M path "%path%;%USERPROFILE%\script"
+          - setx /M path "%path%;%USERPROFILE%\.bin"
+          - setx /M path "%path%;cmd.exe /K %USERPROFILE%\.bin\aliases.cmd"
