--- a/meta/configs/zsh.yaml
+++ b/meta/configs/zsh.yaml
@@ -1,6 +1,10 @@
 - create:
           ~/.oh-my-zsh-custom/themes:
+          ~/.oh-my-zsh-custom/plugins:
+          ~/.oh-my-zsh-custom/plugins/zsh-syntax-highlighting:
 
 - link:
           ~/.oh-my-zsh: .oh-my-zsh
           ~/.oh-my-zsh-custom/themes/spaceship.zsh-theme: .spaceship/spaceship.zsh-theme
+          ~/.oh-my-zsh-custom/plugins/zsh-autosuggestions: .zsh-autosuggestions
+          ~/.oh-my-zsh-custom/plugins/zsh-syntax-highlighting: .zsh-syntax-highlighting
