--- a/meta/configs/git.yaml
+++ b/meta/configs/git.yaml
@@ -1,3 +1,7 @@
 - link:
           ~/.gitconfig:
           ~/.gitignore_global:
+          ~/.git-hooks:
+
+- script:
+          - [chmod +x ~/.git-hooks/*]
