Adding config for git

--- a/meta/configs/git.yaml
+++ b/meta/configs/git.yaml
@@ -2,6 +2,7 @@
           ~/.gitconfig:
           ~/.gitignore_global:
           ~/.git-hooks:
+          ~/.gitmessage:
 
 - script:
           - [chmod +x ~/.git-hooks/*]
