--- a/ssh/config
+++ b/ssh/config
@@ -23,6 +23,12 @@ Host maps.alilaguna.it
   PreferredAuthentications publickey
   IdentityFile ~/.ssh/alilaguna
 
+Host marcopolopark.bucintoroviaggi.com
+  HostName 35.198.118.221
+  User developer
+  PreferredAuthentications publickey
+  IdentityFile ~/.ssh/alilaguna
+
 Host 167.71.34.219
   HostName 167.71.34.219
   User root
