--- a/ssh/config
+++ b/ssh/config
@@ -97,3 +97,9 @@ Host pybossa
   PreferredAuthentications publickey
   IdentityFile ~/.ssh/fundor333_mol
   User mscarpa
+
+
+Host gitlab.alilaguna
+  HostName 192.168.50.26
+  PreferredAuthentications password
+  User gitlab
