Adding new config

--- a/meta/configs/programming.yaml
+++ b/meta/configs/programming.yaml
@@ -10,3 +10,5 @@
 
 - link:
           ~/.editorconfig:
+          ~/.alacritty.yml:
+          ~/AppData/Roaming/alacritty/alacritty.yml: alacritty.yml
