Adding module for stuff

--- a/meta/base.yaml
+++ b/meta/base.yaml
@@ -7,7 +7,6 @@
 - link:
           ~/script:
           ~/.sslverify:
-          
 
 - shell:
           - [git submodule sync --recursive, Synchronize the URLs of submodules]
@@ -15,3 +14,7 @@
           - [chmod +x ~/script/*]
 
 - clean: ["~"]
+
+- crontab:
+          - cron: "0 10 * * *"
+            command: "sslverify"
