--- a/.editorconfig
+++ b/.editorconfig
@@ -33,7 +33,7 @@ indent_size = 2
 
 [*.py]
 indent_style = space
-indent_size = 4
+tab_width = 4
 insert_final_newline = true
 trim_trailing_whitespace = true
 end_of_line = lf
