--- a/meta/configs/exe.yaml
+++ b/meta/configs/exe.yaml
@@ -6,3 +6,6 @@
           - setx /M path "%path%;%USERPROFILE%\script"
           - setx /M path "%path%;%USERPROFILE%\.bin"
           - setx /M path "%path%;cmd.exe /K %USERPROFILE%\.bin\aliases.cmd"
+          - set /M path "%path%;%USERPROFILE%\script"
+          - set /M path "%path%;%USERPROFILE%\.bin"
+          - set /M path "%path%;cmd.exe /K %USERPROFILE%\.bin\aliases.cmd"
