Add dns configs script

--- a/meta/base.yaml
+++ b/meta/base.yaml
@@ -8,6 +8,7 @@
           ~/script:
           ~/.sslverify:
           ~/.djangocheck:
+          ~/.dnschecker:
 
 - shell:
           - [git submodule sync --recursive, Synchronize the URLs of submodules]
