--- a/.editorconfig
+++ b/.editorconfig
@@ -19,7 +19,7 @@ indent_style = tab
 indent_style = space
 indent_size = 2
 
-[{*.py,sslverify,djangocheck,bibliounive,antigravity, nico_script,stipendi}]
+[{*.py,sslverify,djangocheck,bibliounive,antigravity, nico_script,stipendi,dnschecker}]
 indent_style = space
 tab_width = 4
 insert_final_newline = true
