--- a/meta/configs/programming.yaml
+++ b/meta/configs/programming.yaml
@@ -12,3 +12,5 @@
           ~/.editorconfig:
           ~/.alacritty.yml:
           ~/AppData/Roaming/alacritty/alacritty.yml: alacritty.yml
+          ~/.servergrimoire_config:
+          ~/.servergrimorie_data:
