--- a/meta/configs/programming.yaml
+++ b/meta/configs/programming.yaml
@@ -13,4 +13,4 @@
           ~/.alacritty.yml:
           ~/AppData/Roaming/alacritty/alacritty.yml: alacritty.yml
           ~/.servergrimoire_config:
-          ~/.servergrimorie_data:
+          ~/.servergrimoire_data:
