--- a/meta/configs/programming.yaml
+++ b/meta/configs/programming.yaml
@@ -1,16 +1,15 @@
 - create:
-          ~/Coding:
-          ~/.gostuff:
-          ~/.ipython:
-          ~/.jupyter:
-          ~/.gem:
-          ~/.ploty:
-          ~/.poetry:
-          ~/.rustup:
+    ~/Coding:
+    ~/.gostuff:
+    ~/.ipython:
+    ~/.jupyter:
+    ~/.gem:
+    ~/.ploty:
+    ~/.poetry:
+    ~/.rustup:
 
 - link:
-          ~/.editorconfig:
-          ~/.alacritty.yml:
-          ~/AppData/Roaming/alacritty/alacritty.yml: alacritty.yml
-          ~/.servergrimoire_config:
-          ~/.servergrimoire_data:
+    ~/.editorconfig:
+    ~/.alacritty.yml:
+    ~/AppData/Roaming/alacritty/alacritty.yml: alacritty.yml
+    ~/.servergrimoire:
