--- a/servergrimoire/config
+++ b/servergrimoire/config
@@ -1,1 +1,10 @@
-{"colors": {"info_colo": "\u001b[94m", "debug_color": "\u001b[92m", "warning_color": "\u001b[91m", "end_color": "\u001b[0m"}, "logger_level": "INFO", "data_path": "/Users/matteoscarpa/.servergrimoire/data"}
+{
+	"colors": {
+		"info_colo": "\u001b[94m",
+		"debug_color": "\u001b[92m",
+		"warning_color": "\u001b[91m",
+		"end_color": "\u001b[0m"
+	},
+	"logger_level": "INFO",
+	"data_path": "~/.servergrimoire/data"
+}
