--- a/.editorconfig
+++ b/.editorconfig
@@ -13,7 +13,8 @@ indent_style = space
 indent_size = 8
 
 [Makefile]
-indent_style = tab
+indent_style = space
+indent_size = 4
 
 [{package.json, .travis.yml}]
 indent_style = space
