--- a/meta/base.yaml
+++ b/meta/base.yaml
@@ -6,7 +6,7 @@
 
 - link:
           ~/script:
-          ~/.servergrimoire:
+          ~/.servergrimoire/data: servergrimoire-data
 
 - shell:
           - [chmod +x ~/script/*]
