--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,5 +4,7 @@ repos:
           hooks:
                   - id: check-toml
                   - id: check-yaml
+                  - id: check-json
                   - id: end-of-file-fixer
+                  - id: requirements-txt-fixer
                   - id: trailing-whitespace
