--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,9 +1,12 @@
+fail_fast: true
 repos:
         - repo: https://github.com/pre-commit/pre-commit-hooks
           rev: v3.3.0
           hooks:
                   - id: check-toml
                   - id: check-yaml
+                  - id: check-json
+                  - id: pretty-format-json
                   - id: check-json
                   - id: end-of-file-fixer
                   - id: requirements-txt-fixer
