--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -7,6 +7,7 @@ repos:
                   - id: check-yaml
                   - id: check-json
                   - id: pretty-format-json
+                    args: ["--autofix"]
                   - id: check-json
                   - id: end-of-file-fixer
                   - id: requirements-txt-fixer
