--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,9 +6,10 @@ repos:
                   - id: check-toml
                   - id: check-yaml
                   - id: check-json
+                  - id: check-xml
                   - id: pretty-format-json
                     args: ["--autofix"]
-                  - id: check-json
                   - id: end-of-file-fixer
                   - id: requirements-txt-fixer
                   - id: trailing-whitespace
+                  - id: end-of-file-fixer
