Updating meta and configs bat

--- a/servergrimoire/config.json
+++ b/servergrimoire/config.json
@@ -1,5 +1,1 @@
-{
-  "data_path": "C:\\Users\\mscarpa\\.servergrimoire\\data.json",
-  "folder_script": "C:\\Users\\mscarpa\\.servergrimoire\\script",
-  "logger_level": "ERROR"
-}
+{"logger_level": "ERROR"}
