--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,13 +3,15 @@ repos:
         - repo: https://github.com/pre-commit/pre-commit-hooks
           rev: v3.4.0
           hooks:
-                  - id: check-toml
-                  - id: check-yaml
                   - id: check-json
                   - id: check-xml
-                  - id: pretty-format-json
-                    args: ["--autofix"]
+                  - id: check-yaml
+                  - id: check-toml
                   - id: end-of-file-fixer
                   - id: requirements-txt-fixer
                   - id: trailing-whitespace
                   - id: end-of-file-fixer
+        - repo: https://github.com/pappasam/toml-sort
+          rev: v0.18.0
+          hooks:
+                  - id: toml-sort
