--- a/meta/configs/zsh.yaml
+++ b/meta/configs/zsh.yaml
@@ -10,3 +10,4 @@
           ~/.oh-my-zsh-custom/themes/spaceship.zsh-theme: .spaceship/spaceship.zsh-theme
           ~/.oh-my-zsh-custom/plugins/zsh-autosuggestions: .zsh-autosuggestions
           ~/.oh-my-zsh-custom/plugins/zsh-syntax-highlighting: .zsh-syntax-highlighting
+          ~/.oh-my-zsh-custom/plugins/bofh: .bofh
