--- a/.gitmodules
+++ b/.gitmodules
@@ -21,5 +21,5 @@
 	path = crontab-dotbot
 	url = https://github.com/fundor333/crontab-dotbot.git
 [submodule "bofh"]
-	path = bofh
+	path = .bofh
 	url = https://github.com/fundor333/bofh.git
