--- a/meta/configs/programming.yaml
+++ b/meta/configs/programming.yaml
@@ -1,13 +1,14 @@
 - create:
-      ~/Coding:
-      ~/.gostuff:
-      ~/.ipython:
-      ~/.jupyter:
-      ~/.gem:
-      ~/.ploty:
-      ~/.poetry:
-      ~/.rustup:
+          ~/Coding:
+          ~/.gostuff:
+          ~/.ipython:
+          ~/.jupyter:
+          ~/.gem:
+          ~/.ploty:
+          ~/.poetry:
+          ~/.rustup:
 
 - link:
-      ~/.editorconfig:
-      ~/.flake8:
+          ~/.editorconfig:
+          ~/.flake8:
+          ~/.hushlogin:
