--- a/meta/configs/git.yaml
+++ b/meta/configs/git.yaml
@@ -3,6 +3,7 @@
           ~/.gitignore_global:
           ~/.git-hooks:
           ~/.gitmessage:
+          ~/.config/gh/config.yml: config/gh/config.yml
 
 - shell:
           - [chmod +x ~/.git-hooks/*]
