--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,6 @@ url = https://github.com/fundor333/bofh.git
 [submodule ".smile"]
 path = .smile
 url = https://github.com/fundor333/smile.git
+[submodule ".powerlevel10k"]
+path = .powerlevel10k
+url = https://github.com/romkatv/powerlevel10k.git
