--- a/.mergify.yml
+++ b/.mergify.yml
@@ -1,7 +1,7 @@
 pull_request_rules:
   - name: automatic merge for DependaBot pull requests
     conditions:
-      - author=dependabot-preview[bot]
+      - "author=dependabot-preview[bot]"
     actions:
       merge:
         method: merge
