--- a/.editorconfig
+++ b/.editorconfig
@@ -10,9 +10,9 @@ charset = utf-8
 
 [*.{yml,yaml}]
 indent_style = space
-indent_size = 8
+indent_size = 2
 
-[Makefile]
+[{Makefile, makefile}]
 indent_style = space
 indent_size = 4
 
