--- a/ssh/config
+++ b/ssh/config
@@ -1,124 +1,3 @@
-IdentityFile ~/.ssh/fundor333_mol
-IdentityFile ~/.ssh/alilaguna
-
-#SCE_SEPARATOR:Lavoro
-
-#SCE_ICON:briefcase
-Host presenze.alilaguna.it
-	User developer
-	HostName 35.198.178.137
-	IdentityFile ~/.ssh/alilaguna
-	PreferredAuthentications publickey
-
-
-#SCE_ICON:suitcase
-Host intranet.alilaguna.it
-	User developer
-	HostName 35.204.22.128
-	IdentityFile ~/.ssh/alilaguna
-	PreferredAuthentications publickey
-
-Host intranet.bucintoroviaggi.com
-	User developer
-	HostName intranet.bucintoroviaggi.com
-	IdentityFile ~/.ssh/alilaguna
-	PreferredAuthentications publickey
-
-Host ninshubur.alilaguna.it
-	User developer
-	HostName ninshubur.alilaguna.it
-	IdentityFile ~/.ssh/alilaguna
-	PreferredAuthentications publickey
-
-Host maggiordomo
-	User developer
-	HostName 35.242.206.39
-	IdentityFile ~/.ssh/alilaguna
-	PreferredAuthentications publickey
-
-#SCE_ICON:briefcase
-Host marcopolopark.bucintoroviaggi.com
-	User developer
-	HostName 35.198.118.221
-	IdentityFile ~/.ssh/alilaguna
-	PreferredAuthentications publickey
-
-#SCE_ICON:briefcase
-Host maps.alilaguna.it
-	User developer
-	HostName maps.alilaguna.it
-	IdentityFile ~/.ssh/alilaguna
-	PreferredAuthentications publickey
-
-Host gitlab.alilaguna
-	User gitlab
-	HostName 192.168.50.26
-	PreferredAuthentications password
-
-Host jenkins
-	User developer
-	HostName 35.242.206.39
-	IdentityFile ~/.ssh/alilaguna
-	PreferredAuthentications publickey
-
-Host inquisition
-	User alilaguna
-	HostName 193.206.140.14
-	Port 8891
-	PreferredAuthentications password
-
-
-# Sistema Caronte
-#
-Host bauer.veneziaturismo.net marriott.veneziaturismo.net stregis.veneziaturismo.net marive.alilaguna.it aman.veneziaturismo.net casagredo.veneziaturismo.net deidogi.veneziaturismo.net hilton.veneziaturismo.net b2b.veneziaturismo.net caronte
-	User developer
-	HostName 35.246.247.89
-	IdentityFile ~/.ssh/alilaguna
-	PreferredAuthentications publickey
-
-# Socket Contadenaro Alilaguna
-Host calzino
-	User alilaguna
-	HostName 192.168.50.20
-	PreferredAuthentications password
-
-Host innave.net innave www.innave.net
-	User developer
-	HostName 35.210.243.219
-	IdentityFile ~/.ssh/alilaguna
-	PreferredAuthentications publickey
-
-#SCE_SEPARATOR:Progetti Tools
-
-#SCE_ICON:pirate
-Host molecola_aste
-	User root
-	HostName 167.71.34.219
-	IdentityFile ~/.ssh/fundor333_mol
-	PreferredAuthentications publickey
-
-#SCE_SEPARATOR:Personali
-
-Host gitlab.com
-	User git
-	HostName gitlab.com
-	IdentityFile ~/.ssh/fundor333_rsa
-	AddKeysToAgent yes
-
-Host github.com
-	User git
-	HostName github.com
-	IdentityFile ~/.ssh/fundor333_rsa
-	AddKeysToAgent yes
-
-Host isolachenoncearte.it
-	User root
-	HostName 165.22.82.136
-	IdentityFile ~/.ssh/fundor333_mol
-	PreferredAuthentications publickey
-
-Host appletune
-	User root
-	HostName 64.227.119.108
-	IdentityFile ~/.ssh/fundor333_mol
-	PreferredAuthentications publickey
+Include ~/.ssh/config-dir/job_config
+Include ~/.ssh/config-dir/personal_config
+Include ~/.ssh/config-dir/hosting_config
