--- a/meta/configs/brew.yaml
+++ b/meta/configs/brew.yaml
@@ -1,24 +1,24 @@
 - brew:
-          - git
-          - git-lfs
-          - emacs
-          - pyenv
-          - git-flow
-          - heroku
-          - python
-          - python@3.6
-          - python@3.7
-          - python@3.8
-          - python@3.9
-          - sqlite
-          - dart
-          - openssl
-          - elixir
-          - hugo
-          - qt
-          - erlang
-          - pipenv
-          - redis
-          - sass/sass/sass
-          - postgresql
-          - exercism
+    - bat
+    - cowsay
+    - emacs
+    - exercism
+    - fish
+    - fortune
+    - gh
+    - git
+    - git-flow
+    - graphviz
+    - heroku
+    - hugo
+    - openssl
+    - pyenv
+    - python
+    - python@3.7
+    - python@3.8
+    - python@3.9
+    - pipenv
+    - postgresql
+    - rust
+    - sass/sass/sass
+    - sassc
